# nippon-koku

./: .envrc_public  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  flake.nix  gen-certs.py  gen-certs.sh  gen-image.sh  gen-images.py  gen-images.sh  op-client.py  op-client.sh  requirements.txt  shell.nix  upgrade.sh
.github/workflows/: docker-image.yml
application/: tor-snowflake.jsonnet  tor-snowflake.yaml
application/tor-snowflake/: ns-torproject.yaml
applications/: bootstrap.jsonnet  cert-manager.yaml  etcd-snapshots.yaml  extra-ingresses.jsonnet  extra-namespaces.jsonnet  extra-secrets.jsonnet  grafana.yaml  ingresses.jsonnet  jellyfin.jsonnet  k8s-monitoring.yaml  kubescape.yaml  kubetail.yaml  lgtm.yaml  longhorn.yaml  minecraft.jsonnet  namespaces.jsonnet  otel-collectors.jsonnet  otel-operator.yaml  pihole.jsonnet  sealed-secrets.yaml  secrets.jsonnet  tailscale-operator.yaml  tor-snowflake.jsonnet  traefik-config.jsonnet  victorialogs.yaml  victoriametrics.yaml
bootstrap/: ansible-requirements.yml  ansible.cfg  inventory.yml  k3s-uninstall.yml  playbook.yml  python-requirements.txt  site.yml  testing.yml  upgrade.yml
bootstrap/tasks/: baseline.yml  bootstrap.yml  bootstrap_cleanup.yml  special_dynamic_groups.yml
gen_images/: Cargo.toml  Dockerfile  Dockerfile.rust  gen_images.py
gen_images/src/: main.rs
gen_images/templates/: grub.cfg.t  post-install.sh.t  preseed.cfg.t
nix/: types-passlib.nix
os-install/: .dockerignore  Dockerfile  docker-entrypoint.sh  gen-image.sh  gen_images.py  test_gen_images.py
(+310 files in other folders)
